v0.13.5/_sources/generated/statsmodels.tsa.statespace.kalman_filter.KalmanFilter.rst.txt
statsmodels.tsa.statespace.kalman\_filter.KalmanFilter
======================================================

.. currentmodule:: statsmodels.tsa.statespace.kalman_filter

.. autoclass:: KalmanFilter
   :exclude-members: bind,clone,diff_endog,extend,filter,fixed_scale,impulse_responses,initialize,initialize_approximate_diffuse,initialize_diffuse,initialize_known,initialize_stationary,loglike,loglikeobs,set_conserve_memory,set_filter_method,set_filter_timing,set_inversion_method,set_stability_method,simulate,

   
   
   .. rubric:: Methods

   .. autosummary::
      :toctree:

      ~KalmanFilter.bind
      ~KalmanFilter.clone
      ~KalmanFilter.diff_endog
      ~KalmanFilter.extend
      ~KalmanFilter.filter
      ~KalmanFilter.fixed_scale
      ~KalmanFilter.impulse_responses
      ~KalmanFilter.initialize
      ~KalmanFilter.initialize_approximate_diffuse
      ~KalmanFilter.initialize_diffuse
      ~KalmanFilter.initialize_known
      ~KalmanFilter.initialize_stationary
      ~KalmanFilter.loglike
      ~KalmanFilter.loglikeobs
      ~KalmanFilter.set_conserve_memory
      ~KalmanFilter.set_filter_method
      ~KalmanFilter.set_filter_timing
      ~KalmanFilter.set_inversion_method
      ~KalmanFilter.set_stability_method
      ~KalmanFilter.simulate
   
   
   

   
   
   .. rubric:: Properties

   .. autosummary::
      :toctree:

      ~KalmanFilter.conserve_memory
      ~KalmanFilter.design
      ~KalmanFilter.dtype
      ~KalmanFilter.endog
      ~KalmanFilter.filter_augmented
      ~KalmanFilter.filter_chandrasekhar
      ~KalmanFilter.filter_collapsed
      ~KalmanFilter.filter_concentrated
      ~KalmanFilter.filter_conventional
      ~KalmanFilter.filter_exact_initial
      ~KalmanFilter.filter_extended
      ~KalmanFilter.filter_method
      ~KalmanFilter.filter_methods
      ~KalmanFilter.filter_square_root
      ~KalmanFilter.filter_timing
      ~KalmanFilter.filter_univariate
      ~KalmanFilter.filter_unscented
      ~KalmanFilter.inversion_method
      ~KalmanFilter.inversion_methods
      ~KalmanFilter.invert_cholesky
      ~KalmanFilter.invert_lu
      ~KalmanFilter.invert_univariate
      ~KalmanFilter.memory_conserve
      ~KalmanFilter.memory_no_filtered
      ~KalmanFilter.memory_no_filtered_cov
      ~KalmanFilter.memory_no_filtered_mean
      ~KalmanFilter.memory_no_forecast
      ~KalmanFilter.memory_no_forecast_cov
      ~KalmanFilter.memory_no_forecast_mean
      ~KalmanFilter.memory_no_gain
      ~KalmanFilter.memory_no_likelihood
      ~KalmanFilter.memory_no_predicted
      ~KalmanFilter.memory_no_predicted_cov
      ~KalmanFilter.memory_no_predicted_mean
      ~KalmanFilter.memory_no_smoothing
      ~KalmanFilter.memory_no_std_forecast
      ~KalmanFilter.memory_options
      ~KalmanFilter.memory_store_all
      ~KalmanFilter.obs
      ~KalmanFilter.obs_cov
      ~KalmanFilter.obs_intercept
      ~KalmanFilter.prefix
      ~KalmanFilter.selection
      ~KalmanFilter.solve_cholesky
      ~KalmanFilter.solve_lu
      ~KalmanFilter.stability_force_symmetry
      ~KalmanFilter.stability_method
      ~KalmanFilter.stability_methods
      ~KalmanFilter.state_cov
      ~KalmanFilter.state_intercept
      ~KalmanFilter.time_invariant
      ~KalmanFilter.timing_init_filtered
      ~KalmanFilter.timing_init_predicted
      ~KalmanFilter.timing_options
      ~KalmanFilter.transition
   
   
   